# commit-message-generator-agent

./: .coveragerc  .editorconfig  .flake8  .gitignore  LICENSE  Makefile  README-PYINSTALLER.md  README.md  agent_config.json  commit_message_generator.spec  install.sh  mcp_setup.md  pyproject.toml  requirements.txt  rthook-pydantic_ai.py  setup.py  setup_instructions.md  system_prompt.md
.github/workflows/: deploy.yml  test.yml
commit_message_generator/: __init__.py  __main__.py  agent_prompts.py  cli.py  commit_generator.py  config.py  configure_langfuse.py  default_config.yaml  git_utils.py  models.py  rich_utils.py
hooks/: hook-logfire.py  hook-pydantic.py  hook-pydantic_ai_slim.py  rthook-pydantic.py
tests/: __init__.py  conftest.py  test_config.yaml
tests/integration/: __init__.py  test_cli.py  test_commit_generator.py
tests/unit/: test_config.py  test_git_utils.py  test_models.py
