[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_third_party = ["pytest"]

[tool.pycln]
all = true

[tool.docformatter]
wrap-summaries = 88
wrap-descriptions = 88
blank = true
pre-summary-newline = false
make-summary-multi-line = false

[tool.autotyping]
safe = true
# Only scan Python files in the main package directory
directory = "commit_message_generator"
# Exclude common directories
ignore = [
    "**/__pycache__",
    "**/.pytest_cache",
    "**/.mypy_cache",
    "**/.venv",
    "**/venv",
    "**/env",
    "**/build",
    "**/dist",
    "**/.git",
    "**/.github",
    "**/.vscode",
    "**/tests",
    "**/examples",
    "**/docs"
]
# Only process .py files
extensions = ["py"]

[tool.coverage.run]
source = ["commit_message_generator"]
include = ["commit_message_generator/*.py"]
omit = [
    "commit_message_generator/__main__.py",
    "commit_message_generator/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "raise ValueError",
    "@abstractmethod",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
